2010-02-27  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.cc (do_index_op): Use checkelem for scalar indices.
	Simplify.

2010-02-26  Jaroslav Hajek  <highegg@gmail.com>

	* src/xpow.cc: Update.
	* src/ov-base-diag.cc: Update.

2010-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/str2double.cc (single_number): New helper func.
	(extract_number): Call it instead of >> to get Inf's and NaN's
	correctly.

2010-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/str2double.cc: New source.

2010-02-19  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/qr.cc: Increase tolerance for test.

2010-02-24  Jaroslav Hajek  <highegg@gmail.com>

	* TEMPLATE-INST/Array-tc.cc: Remove Array2 instantiation.
	* DLD-FUNCTIONS/besselj.cc: Use Array instead of Array2.
	* DLD-FUNCTIONS/tril.cc: Ditto.
	* data.cc: Ditto.
	* ov-typeinfo.cc: Ditto.
	* ov-typeinfo.h: Ditto.
	* pr-output.cc: Ditto.

2010-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* ov-bool-mat.h (octave_bool_matrix::octave_bool_matrix (const
	Array<bool>&)): New ctor.
	* ov-ch-mat.h (octave_char_matrix::octave_char_matrix (const
	Array<char>&)): New ctor.
	* ov-str-mat.h (octave_char_matrix_str::octave_char_matrix_str (const
	Array<char>&)): New ctor.
	(octave_char_matrix_sq_str::octave_char_matrix_sq_str (const
	Array<char>&)): New ctor.

2010-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* Cell.cc: Reflect Array API changes.
	* DLD-FUNCTIONS/__convn__.cc: Ditto.
	* DLD-FUNCTIONS/__glpk__.cc: Ditto.
	* DLD-FUNCTIONS/__magick_read__.cc: Ditto.
	* DLD-FUNCTIONS/bsxfun.cc: Ditto.
	* DLD-FUNCTIONS/cellfun.cc: Ditto.
	* DLD-FUNCTIONS/conv2.cc: Ditto.
	* DLD-FUNCTIONS/dlmread.cc: Ditto.
	* DLD-FUNCTIONS/filter.cc: Ditto.
	* DLD-FUNCTIONS/kron.cc: Ditto.
	* DLD-FUNCTIONS/qz.cc: Ditto.
	* DLD-FUNCTIONS/regexp.cc: Ditto.
	* DLD-FUNCTIONS/sub2ind.cc: Ditto.
	* data.cc: Ditto.
	* file-io.cc: Ditto.
	* gl-render.cc: Ditto.
	* ls-mat5.cc: Ditto.
	* oct-map.cc: Ditto.
	* oct-obj.h: Ditto.